--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	
 <!-- Need to add my mini icon ------------------------------>
 	<link rel="icon" href="http://example.com/favicon.png"> 
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </style>
 </head>
 <body> 
