Adding Icon,making a js file
Cleaning up index

--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>My Web</title>
+	<title>Smeet Patel Home</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
-	
-<!-- Need to add my mini icon ------------------------------>
-	<link rel="icon" href="http://example.com/favicon.png"> 
+<!-- My my mini icon ------------------------------>
+	<link rel="icon" href="spMini.png"> 
+<!-- Make the scale of screen to 1 to device ------------------------------>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-</style>
+	<script type="text/javascript" src="Smeetjavascript.js"></script>
 </head>
 <body> 
 
@@ -29,15 +29,6 @@
 <!---------------------------------------------------------->
 <!-- Index Page Banner ------------------------------------->	
 <img src="smeet1.png" alt="Smeet" style="width:100%">
-<!--<div class="bannerContainer">
-<img src="me1.jpg" alt="Smeet" style="width:100%" class="me1">
-<div class="top-right"><font size="60px">Hello!</font><br>
-<font size="6px">I’m <b><em>Smeet Patel</em></b></font><br>
-<pre><i>A Master of Software Development student
-at Victoria University of Wellington<i></pre></div>
-<div class="top-left"> 
-<img src="sp1.png" height="180px">
-<p>Work that produces a <b><em>smile</em></b></p>-->
 
 <!---------------------------------------------------------->
 <!-- Footer with Icons ------------------------------------->
@@ -51,19 +42,5 @@ at Victoria University of Wellington<i></pre></div>
 		<a href="https://goo.gl/maps/fReyXVpdCDB2"><i class="fa fa-map-marker"></i></a>
 	</div>
 </footer>
-
-<!--The Magic Code using Javascript which allows the meun button
-to appear and enabling the nav bar to be responsive -->
-<script>
-function myFunction() {
-    var x = document.getElementById("mynav1");
-    if (x.className === "nav1") {
-        x.className += " responsive";
-    } else {
-        x.className = "nav1";
-    }
-}
-</script>
-
 </body>
 </html>
