--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 </p>
 <!---------------------------------------------------------->
 <!-- Index Page Banner ------------------------------------->	
-<img src="smeet1lesstext.png" alt="Smeet" style="width:100%">
+<img src="smeet1less.png" alt="Smeet" style="width:100%">
 
 <!---------------------------------------------------------->
 <!-- Footer with Icons ------------------------------------->
