--- a/index.html
+++ b/index.html
@@ -26,14 +26,12 @@
 	  <a href="javascript:void(0);" style="font-size:15px;" class="menubutton" onclick="myFunction()">&#9776;</a>
 	</div>
 
-<div class="cont">
 <p class="intro">Hello! My name is <b><em>Smeet</em></b>.</p><b>
-<pre class="biggerfont">Welcome to my website. <i>I am passionate about web design, mobile and project orientated task and I am a travel enthusiast.</i></pre><p class="biggerfont1">I am a Master of Software Development student @ Victoria University of Wellington (VUW).
+<pre class="biggerfont">Welcome to my website. <i>I am passionate about web design, mobile and project orientated task and a travel enthusiast.</i></pre><p class="biggerfont">I am a Master of Software Development student @ Victoria University of Wellington (VUW).
 </p>
-</div>
 <!---------------------------------------------------------->
 <!-- Index Page Banner ------------------------------------->	
-<img src="smeet1less.png" alt="Smeet" style="width:100%">
+<img src="smeet1.png" alt="Smeet" style="width:100%">
 
 <!---------------------------------------------------------->
 <!-- Footer with Icons ------------------------------------->
