--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 </div>
 <!---------------------------------------------------------->
 <!-- Index Page Banner ------------------------------------->	
-<img src="smeet1.png" alt="Smeet" style="width:100%">
+<img src="smeet1less.png" alt="Smeet" style="width:100%">
 
 <!---------------------------------------------------------->
 <!-- Footer with Icons ------------------------------------->
