--- a/aboutme.html
+++ b/aboutme.html
@@ -3,6 +3,7 @@
 <head>
 	<title>About me</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </style>
 </head>
 <body>
