--- a/index.html
+++ b/index.html
@@ -34,7 +34,49 @@
 <!---------------------------------------------------------->
 <!-- Index Page Banner ------------------------------------->	
 <img src="smeet1p.png" alt="Smeet" style="width:100%">
-
+<!-- Index Page sports titles ------------------------------>	
+	<div class="centerWrap"><!--Centering everything in the div-->
+	<!--enable for the flex tiles row and col--->
+		<div class="row"> 
+		  <div class="column">
+		  <br>
+		  <!--container consist the image and text to display center
+		  when full screen---------------------------------------->
+			<div class="hoverOverImage">
+				<img src="2shakes.png" alt="Webapp" class="hoverOverImage-layer_bottom">
+				<a href="aboutme.html"><div class="hoverOverImage-layer_top">
+					<div class="hoverOverImage-text">Web Development & UX</div>
+				</div></a>
+			</div>
+<br><br>
+					<div class="hoverOverImage">
+			<img src="ebike.png" alt="Webapp" class="hoverOverImage-layer_bottom">
+			<a href="aboutme.html"><div class="hoverOverImage-layer_top">
+				<div class="hoverOverImage-text">Graphical Design Projects</div>
+			</div></a>
+		</div>
+			
+		</div>
+			<!--second col-------------->
+		<div class="column">
+		<br>
+			<div class="hoverOverImage">
+				<img src="bugworld.png" alt="Native App" class="hoverOverImage-layer_bottom">
+				<div class="hoverOverImage-layer_top">
+					<div class="hoverOverImage-text">Native App</div>
+				</div>
+			</div>
+<br><br>
+		<div class="hoverOverImage">
+			<img src="home101.jpeg" alt="Native App" class="hoverOverImage-layer_bottom">
+			<div class="hoverOverImage-layer_top">
+				<div class="hoverOverImage-text">Other Projects</div>
+			</div>
+		</div>
+	</div> 
+	</div>
+</div>
+<br>
 <!---------------------------------------------------------->
 <!-- Footer with Icons ------------------------------------->
 <footer class="footer">
@@ -47,5 +89,66 @@
 		<a href="https://goo.gl/maps/fReyXVpdCDB2"><i class="fa fa-map-marker"></i></a>
 	</div>
 </footer>
+<style>
+.hoverOverImage * {
+	box-sizing: border-box;
+}
+.hoverOverImage {
+	position: relative;
+	display: inline-block;
+	overflow: hidden;
+	max-width: 100%;
+	height: auto;
+}
+.hoverOverImage img {
+	max-width: 100%;
+}
+.hoverOverImage .hoverOverImage-layer_bottom {
+	display: block;
+}
+.hoverOverImage .hoverOverImage-layer_top {
+	opacity: 0;
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	width: 100%;
+	height: 100%;
+	background: rgba(0, 0, 0, 0.6);
+	color: #fff;
+	padding: 15px;
+	-moz-transition: all 0.4s ease-in-out 0s;
+	-webkit-transition: all 0.4s ease-in-out 0s;
+	-ms-transition: all 0.4s ease-in-out 0s;
+	transition: all 0.4s ease-in-out 0s;
+}
+.hoverOverImage:hover .hoverOverImage-layer_top,
+.hoverOverImage.active .hoverOverImage-layer_top {
+	opacity: 1;
+}
+.hoverOverImage .hoverOverImage-text {
+	text-align: center;
+	font-size: 120%;
+	display: inline-block;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	-moz-transform: translate(-50%, -50%);
+	-webkit-transform: translate(-50%, -50%);
+	-ms-transform: translate(-50%, -50%);
+	transform: translate(-50%, -50%);
+}
+.hoverOverImage .hoverOverImage-text_mobile {
+	font-size: 200%;
+	border-top: 1px solid rgb(179, 179, 179); /* for old browsers */
+	border-top: 1px solid rgba(179, 179, 179, 0.7);
+	margin-top: 5px;
+	padding-top: 2px;
+	display: none;
+}
+.hoverOverImage.active .hoverOverImage-text_mobile {
+	display: block;
+}</style>
 </body>
 </html>
