Updating to programing projects

--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
 			</div>
 <br><br>
 		<div class="hoverOverImage">
-			<img src="home101.jpeg" alt="Native App" class="hoverOverImage-layer_bottom">
+			<img src="conwaysMe.jpeg" alt="Native App" class="hoverOverImage-layer_bottom">
 			<div class="hoverOverImage-layer_top">
-				<div class="hoverOverImage-text">Other Projects</div>
+				<div class="hoverOverImage-text">Programing Projects</div>
 			</div>
 		</div>
 	</div> 
@@ -129,7 +129,7 @@
 }
 .hoverOverImage .hoverOverImage-text {
 	text-align: center;
-	font-size: 120%;
+	font-size: 160%;
 	display: inline-block;
 	position: absolute;
 	top: 50%;
@@ -140,7 +140,7 @@
 	transform: translate(-50%, -50%);
 }
 .hoverOverImage .hoverOverImage-text_mobile {
-	font-size: 200%;
+	font-size: 160%;
 	border-top: 1px solid rgb(179, 179, 179); /* for old browsers */
 	border-top: 1px solid rgba(179, 179, 179, 0.7);
 	margin-top: 5px;
@@ -149,6 +149,7 @@
 }
 .hoverOverImage.active .hoverOverImage-text_mobile {
 	display: block;
-}</style>
+}
+</style>
 </body>
 </html>
