--- a/aboutme.html
+++ b/aboutme.html
@@ -26,9 +26,7 @@
 I am a <u>Master of Software Development student</U> and have completed <u>Bachelor of Commerce degree</u>. I have acquired 
 knowledge in the fields of <em>accountancy, taxation, commercial law and information systems with an IT specialisation</em>. I am 
 developing my skills in software programming to expand on my technical skills by completing a Masters at VUW and doing various 
-programming projects in my spare time. I have combined my tertiary study with tutoring at VUW in Information Systems, and now 
-am looking to use my skill sets, along with my drive to learn and completing tasks to a high standard to further sculpt my 
-professional development through Graduate role. </p><br>
+programming projects in my spare time.... </p><br>
 </div>
 
 <div class="row"> 
