--- a/aboutme.html
+++ b/aboutme.html
@@ -3,6 +3,11 @@
 <head>
 	<title>About me</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
+<!-- My my mini icon ------------------------------>
+	<link rel="icon" href="spMini.png"> 
+<!-- Make the scale of screen to 1 to device ------------------------------>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<script type="text/javascript" src="Smeetjavascript.js"></script>
 </head>
 <body>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -19,7 +24,7 @@
 <img src="w1.jpg" alt="Smeet" style="width:100%" class="responsiveImg">
 <div class="bottom-left"><p><b>ABOUT ME</b></p></div>
 </div>
-<div class="cenabout1">
+<div class="centerWrap">
 <br>
 <div id="lineA">
 <p>Hello, I am <b>Smeet Patel</B> from Wellington, New Zealand.</br></br>
@@ -28,7 +33,91 @@ knowledge in the fields of <em>accountancy, taxation, commercial law and informa
 developing my skills in software programming to expand on my technical skills by completing a Masters at VUW and doing various 
 programming projects in my spare time.... </p><br>
 </div>
+<h1>Skill</h1>
+<h2>Big data analysis, coding and programing, Project management</h2> 
+<h3>Creating basic Algorithms</h2>
+<h1>Experience</h1>
+<h1>Education </h1>
+<h3>Victoria University of Wellington</h3>
+<table>
+<tr>
+<td><b>Master of Software Development</b> (MSwDev)</td>
+<td><b>JULY 2018 – June 2019</b>*</td>
+</tr>
+<tr>
+<td>Expected Graduation December 2019</td>
+<td>* Expected Completion</td>
+</tr>
+<tr>
+<td><b>Bachelor of Commerce</b> (BCOM)</td>
+<td><b>March 2015 – June 2018</b></td>
+</tr>
+<tr>
+<td colspan="2">Major in <u>Accounting</u> and <u>Information System</u> with IT specialisation</td>
+</tr>
+<tr>
+<td colspan="2">Scots College</td>
+</tr>
+<tr>
+<td>NCEA Level 1-3, IB MYP<td>
+<td>2009 - 2010<td>
+</tr>
+<tr>
+<td colspan="2">Accounting, Design Visual Communication,  Economics, Maths and Physics<td>
+</tr>
+<tr>
+<td colspan="2">Top of Design Visual Communication 2014 (Scots College)<td>
+</tr>
+</table>
 
+<h3>WORK Experience</h3>
+<h4>Information Systems Tutor</h4>
+<p>July 2017 - July 2018</p>
+<h5>Victoria University of Wellington</h5>
+<p>Tutor position within the School of Information systems for first-year commerce students. Core duties of the role include: <p>
+<dd><li>Delivery of weekly tutorials to a class of 18 students or workshop to a class of 50 students; </li></dd>
+<dd><li>Running a help desk targeted for Maori and Pacifica students </li></dd>
+<dd><li>Grading of assessment</li></dd>
+<dd><li>Content creatation such games for student learning and participation</li></dd>
+<h4>S & S Patel Superette</h4>
+<p>I work at a family-owned grocery store located in the vibrant Wellington CBD. This experience has helped me understand the dynamics of retail business.
+</p>
+<dd>My responsibilities are:</dd>
+<dd><li>Administrative work</li></dd>
+<dd><li>Management of inventory and stock refill</li></dd>
+<dd><li>Checkout operator for all business functions (inclusive of Lotto, NZ post and Willis Dry Cleaning)</li></dd>
+<br>
+<h3>Other Experience</h3>
+<li><b>ACCY 223 Class Representative (Class Rep)</b><br>
+My responsible as a Student Representative (Class Rep) for the course paper Management Accounting, was to facilitate in communication between students and lecturers, directing course feedback to the course Administrator/ Coordinator and assisting students with any concerns. 
+</li>
+<dd>Some of the additional responsibilities involved:</dd>
+<dd><li>Reporting back to the teaching staff about test performance and uncertainty or queries raised by students</li> </dd>
+<br>
+<li><b>INFO 141 Class Representative (Class Rep)</b><br>
+My responsible as a Student Representative (Class Rep) for course paper Systems Analysis (INFO 141), was to facilitate in communication between students and lecturers, directing course feedback to the course Administrator/ Coordinator and assisting students with any concerns. <br>
+<dd>Some of the additional responsibilities involved:</dd>
+<dd><li>Negotiation of the project date submission to be changed.</li> </dd>
+<dd><li>Requesting for clarification on assignment and the details for students. </li></dd>
+</li>
+<br>
+<li><b>Cuba-Dupa (cultural and event Volunteer) 2018</b><br>
+Artist Minder for New Zealand School of Music (Orchestra) and was also offered the opportunity to conduct the first performace.
+</li>
+<br>
+<li><b>Maori and Pacifica student’s helpdesk</b><br>
+Running the Maori and Pacifica students helpdesk for INFO 101 for the website project. Guiding or teaching students when assistance is required.</li>
+<br>
+<li><b>South coast beach clean-up and McAllister Park Tree Planting</b><br>
+Cleaning our beaches (Owhiro Bay) [September] and planting trees
+</li>
+<br>
+<li><b>Victoria International Leadership Programme 2016 - present</b><br>
+Participating in events and attending leadership / cultural seminars
+</li>
+<br>
+<li><b>Victoria University Badminton Club</b></li>
+<br>
 <div class="row"> 
   <div class="column">
     <img src="p4.jpg" style="width:100%">
@@ -72,15 +161,5 @@ programming projects in my spare time.... </p><br>
     <a href="https://goo.gl/maps/fReyXVpdCDB2"><i class="fa fa-map-marker"></i></a>
   </div>
 </footer>
-<script>
-function myFunction() {
-    var x = document.getElementById("mynav1");
-    if (x.className === "nav1") {
-        x.className += " responsive";
-    } else {
-        x.className = "nav1";
-    }
-}
-</script>
 </body>
 </html>
