--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 			</div>
 <br><br>
 					<div class="hoverOverImage">
-			<img src="ebike.png" alt="Webapp" class="hoverOverImage-layer_bottom">
+			<img src="ebike1.png" alt="Webapp" class="hoverOverImage-layer_bottom">
 			<a href="aboutme.html"><div class="hoverOverImage-layer_top">
 				<div class="hoverOverImage-text">Graphical Design Projects</div>
 			</div></a>
