--- a/aboutme.html
+++ b/aboutme.html
@@ -31,46 +31,14 @@
 I am a <u>Master of Software Development student</U> and have completed <u>Bachelor of Commerce degree</u>. I have acquired 
 knowledge in the fields of <em>accountancy, taxation, commercial law and information systems with an IT specialisation</em>. I am 
 developing my skills in software programming to expand on my technical skills by completing a Masters at VUW and doing various 
-programming projects in my spare time.... </p><br>
-</div>
-<h1>Skill</h1>
-<h2>Big data analysis, coding and programing, Project management</h2> 
-<h3>Creating basic Algorithms</h2>
-<h1>Experience</h1>
-<h1>Education </h1>
-<h3>Victoria University of Wellington</h3>
-<table>
-<tr>
-<td><b>Master of Software Development</b> (MSwDev)</td>
-<td><b>JULY 2018 – June 2019</b>*</td>
-</tr>
-<tr>
-<td>Expected Graduation December 2019</td>
-<td>* Expected Completion</td>
-</tr>
-<tr>
-<td><b>Bachelor of Commerce</b> (BCOM)</td>
-<td><b>March 2015 – June 2018</b></td>
-</tr>
-<tr>
-<td colspan="2">Major in <u>Accounting</u> and <u>Information System</u> with IT specialisation</td>
-</tr>
-<tr>
-<td colspan="2">Scots College</td>
-</tr>
-<tr>
-<td>NCEA Level 1-3, IB MYP<td>
-<td>2009 - 2010<td>
-</tr>
-<tr>
-<td colspan="2">Accounting, Design Visual Communication,  Economics, Maths and Physics<td>
-</tr>
-<tr>
-<td colspan="2">Top of Design Visual Communication 2014 (Scots College)<td>
-</tr>
-</table>
+programming projects in my spare time. </p>
+<p>When I am not studying, you will find me reading about new technologies or the current affairs, exploring new places (hiking and travelling), watching such as the Grand Tour, The Block NZ, Grand Designs or more often working on a project. Having a creative minded person, I always thinking about new ways to improve things, to build solutions for issues. I believe that to predict the future; you have to create the future or very much be part of the forefront of changing technology and being innovative.</p>
+<p>Currently, I am Working on updating and adding past projects to the website, enhancing the user experience. Along with the site, am learning Android Studio and looking to convert java application to Android apps. I am also planning to make a native application for construction projects, to improve communication between key stakeholders.</p>
 
-<h3>WORK Experience</h3>
+</div>
+
+<h2>My Experience and Skills</h2>
+<h2>WORK Experience</h2>
 <h4>Information Systems Tutor</h4>
 <p>July 2017 - July 2018</p>
 <h5>Victoria University of Wellington</h5>
@@ -86,13 +54,14 @@ programming projects in my spare time.... </p><br>
 <dd><li>Administrative work</li></dd>
 <dd><li>Management of inventory and stock refill</li></dd>
 <dd><li>Checkout operator for all business functions (inclusive of Lotto, NZ post and Willis Dry Cleaning)</li></dd>
+<dd><li>Setting up and maintaining any technologies implemented, such as the POS and ordering system.</li></dd>
 <br>
-<h3>Other Experience</h3>
+<h2>Other Experience</h2>
 <li><b>ACCY 223 Class Representative (Class Rep)</b><br>
 My responsible as a Student Representative (Class Rep) for the course paper Management Accounting, was to facilitate in communication between students and lecturers, directing course feedback to the course Administrator/ Coordinator and assisting students with any concerns. 
 </li>
 <dd>Some of the additional responsibilities involved:</dd>
-<dd><li>Reporting back to the teaching staff about test performance and uncertainty or queries raised by students</li> </dd>
+<dd><li>Reporting back to the teaching staff about test performance and uncertainty or queries raised by the students.</li> </dd>
 <br>
 <li><b>INFO 141 Class Representative (Class Rep)</b><br>
 My responsible as a Student Representative (Class Rep) for course paper Systems Analysis (INFO 141), was to facilitate in communication between students and lecturers, directing course feedback to the course Administrator/ Coordinator and assisting students with any concerns. <br>
@@ -118,6 +87,43 @@ Participating in events and attending leadership / cultural seminars
 <br>
 <li><b>Victoria University Badminton Club</b></li>
 <br>
+<h2>Education </h2>
+<table>
+<tr>
+<td colspan="2"><h3>Victoria University of Wellington, New Zeland</h3></td>
+</tr>
+<tr>
+<td><b>Master of Software Development</b> (MSwDev)</td>
+<td><b>JULY 2018 – June 2019</b>*</td>
+</tr>
+<tr>
+<td>Expected Graduation December 2019</td>
+<td>* Expected Completion</td>
+</tr>
+<tr>
+<td><b>Bachelor of Commerce</b> (BCOM)</td>
+<td><b>March 2015 – June 2018</b></td>
+</tr>
+<tr>
+<td colspan="2">Major in <u>Accounting</u> and <u>Information System</u> with IT specialisation</td>
+</tr>
+<tr>
+<td colspan="2"><h3>Scots College, Wellington, New Zeland</h3></td>
+</tr>
+<tr>
+<td><b>NCEA Level 1-3, IB MYP</b><td>
+<td>2009 - 2010<td>
+</tr>
+<tr>
+<td colspan="2">Accounting, Design Visual Communication,  Economics, Maths and Physics<td>
+</tr>
+<tr>
+<td colspan="2">Top of Design Visual Communication 2014 (Scots College)<td>
+</tr>
+</table>
+<br>
+
+
 <div class="row"> 
   <div class="column">
     <img src="p4.jpg" style="width:100%">
