--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 		  when full screen---------------------------------------->
 			<div class="hoverOverImage">
 				<img src="2shakes.png" alt="Webapp" class="hoverOverImage-layer_bottom">
-				<a href="aboutme.html"><div class="hoverOverImage-layer_top">
+				<!--<a href="aboutme.html">--><div class="hoverOverImage-layer_top">
 					<div class="hoverOverImage-text">Web Development & UX</div>
 				</div></a>
 			</div>
