Images and design to about me page

--- a/aboutme.html
+++ b/aboutme.html
@@ -67,7 +67,10 @@ programming projects in my spare time. </p>
 
 <h2 class="w">My Experience and Skills</h2>
 <h2 class="w">WORK Experience</h2>
-<h4>Information Systems Tutor</h4>
+
+		<div class="row"> 
+		  <div class="column">
+<h3>Information Systems Tutor</h3>
 <p>July 2017 - July 2018</p>
 <h5>Victoria University of Wellington</h5>
 <p>Tutor position within the School of Information systems for first-year commerce students. Core duties of the role include: <p>
@@ -76,8 +79,26 @@ programming projects in my spare time. </p>
 <dd><li>Grading of assessment</li></dd>
 <dd><li>Content creatation such games for student learning and participation</li></dd>
 <br>
+			
+		</div>
+			<!--second col-------------->
+		<div class="column">
+		<br>
+			<div class="hoverOverImage">
+				<img src="tut.png" alt="Tutorial slide" class="hoverOverImage-layer_bottom">
+				<div class="hoverOverImage-layer_top">
+					<div class="hoverOverImage-text">Tutorial slide</div>
+				</div>
+			</div>
+<br><br>
+	</div> 
+	</div>
+
 <hr>
-<h4>S & S Patel Superette</h4>
+
+<div class="row"> 
+		  <div class="column">
+<h3>S & S Patel Superette</h3>
 <p>I work at a family-owned grocery store located in the vibrant Wellington CBD. This experience has helped me understand the dynamics of retail business.
 </p>
 <dd>My responsibilities are:</dd>
@@ -86,6 +107,24 @@ programming projects in my spare time. </p>
 <dd><li>Checkout operator for all business functions (inclusive of Lotto, NZ post and Willis Dry Cleaning)</li></dd>
 <dd><li>Setting up and maintaining any technologies implemented, such as the POS and ordering system.</li></dd>
 <br>
+			
+		</div>
+			<!--second col-------------->
+		<div class="column">
+		<br>
+			<div class="hoverOverImage">
+				<img src="shop1.jpg" alt="Shop" class="hoverOverImage-layer_bottom">
+				<div class="hoverOverImage-layer_top">
+					<div class="hoverOverImage-text">Rendering of the Family-owned store</div>
+				</div>
+			</div>
+<br><br>
+	</div> 
+	</div>
+
+
+
+
 <h2 class="w">Other Experience</h2>
 <li><b>ACCY 223 Class Representative (Class Rep)</b><br>
 My responsible as a Student Representative (Class Rep) for the course paper Management Accounting, was to facilitate in communication between students and lecturers, directing course feedback to the course Administrator/ Coordinator and assisting students with any concerns. 
@@ -114,6 +153,11 @@ Participating in events and attending leadership / cultural seminars
 <li><b>Cuba-Dupa (cultural and event Volunteer) 2018</b><br>
 Artist Minder for New Zealand School of Music (Orchestra) and was also offered the opportunity to conduct the first performace.
 </li>
+<br>
+<video class='center' width="640" height="480" controls>
+  <source src="cubadupa.mp4" type="video/mp4">
+  Your browser does not support the video tag.
+</video>
 <br>
 <h2 class="w">Education </h2>
 <table>
