--- a/aboutme.html
+++ b/aboutme.html
@@ -66,6 +66,27 @@ programming projects in my spare time. </p>
 
 
 <h2 class="w">My Experience and Skills</h2>
+<h3>Tools and Software</h3>
+<li>Java</li>
+<li>SQLite</li>
+<li>Android Studio (Native apps)</li>
+<li>PostgreSQL & MongoDB (Not only SQL)</li>
+<li>HTML 5 & CSS 3</li>
+<li>PHP with MariaDB</li>
+<li>Angular JS 6 with JSON and Trello scrum board (Single page application)</li>
+<li>JavaScript</li>
+<li>Kaggle (machine learning) with Python</li>
+<li>Jutinmind Prototyper, Pencil (UX)</li>
+<li>Adobe Creative Suite (PhotoShop, illustrator & Indesign)</li>
+<li>Microsoft Visio (Use case diagrams, Activity Diagram, CRC Cards, Class Diagram, Sequence Diagram, Crows-foot and high level architecture diagram</li>
+<li>Microsoft Excel for complicated tasks such as recording Marcos, writing complex Formulas</li>
+<li>LINQ (information flow mapping application)</li>
+<li>Google Analytics</li>
+<li>Raspbian (pi)</li>
+<li>Sketch-Up, SU podium</li>
+<li>Microsoft PowerPoint for designing visually effective presentations</li>
+<li>WordPress</li>
+
 <h2 class="w">WORK Experience</h2>
 
 		<div class="row"> 
