Moving Pictures to the Blog

--- a/myblog.html
+++ b/myblog.html
@@ -20,8 +20,41 @@
 <img src="p39.jpg" alt="Skyline" style="width:100%" class="responsiveImg">
 <div class="bottom-left"><p><b>BLOG</b></p></div>
 </div>
-
-
+<div class="centerWrap">
+<div class="row"> 
+  <div class="column">
+    <img src="p4.jpg" style="width:100%">
+    <img src="p7.jpg" style="width:100%">
+    <img src="p10.jpg" style="width:100%">
+    <img src="p13.jpg" style="width:100%">
+    <img src="p16.jpg" style="width:100%">
+    <img src="p19.jpg" style="width:100%">
+  </div>
+  <div class="column">
+    <img src="p5.jpg" style="width:100%">
+    <img src="p8.jpg" style="width:100%">
+    <img src="p11.jpg" style="width:100%">
+    <img src="p14.jpg" style="width:100%">
+    <img src="p17.jpg" style="width:100%">
+  </div>  
+  <div class="column">
+    <img src="p6.jpg" style="width:100%">
+    <img src="p9.jpg" style="width:100%">
+    <img src="p12.jpg" style="width:100%">
+    <img src="p15.jpg" style="width:100%">
+    <img src="p18.jpg" style="width:100%">
+    <img src="p20.jpg" style="width:100%">
+  </div>
+  <div class="column">
+    <img src="p21.jpg" style="width:100%">
+    <img src="p22.jpg" style="width:100%">
+    <img src="p23.jpg" style="width:100%">
+    <img src="p24.jpg" style="width:100%">
+    <img src="p25.jpg" style="width:100%">
+    <img src="p26.jpg" style="width:100%">
+  </div>
+</div>
+</div>
 
 <footer class="footer">
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet"/>
@@ -31,18 +64,8 @@
     <a href="mailto:smeetprpatel@gmail.com?Subject=Mail%20from%20Website" target="_top"><i class="fa fa-envelope"></i></a>
     <a href="https://goo.gl/maps/fReyXVpdCDB2"><i class="fa fa-map-marker"></i></a>
   </div>
+  
 </footer>
-
-<script>
-function myFunction() {
-    var x = document.getElementById("mynav1");
-    if (x.className === "nav1") {
-        x.className += " responsive";
-    } else {
-        x.className = "nav1";
-    }
-}
-</script>
 
 </body>
 </html>
