--- a/aboutme.html
+++ b/aboutme.html
@@ -27,12 +27,12 @@
 <div class="centerWrap">
 <br>
 <div id="lineA">
-<p>Hello, I am <b>Smeet Patel</B> from Wellington, New Zealand.</br></br>
+<p>Hello, I am <b>Smeet Patel</B> from Wellington, New Zealand. By now you may be wondering about the design for the logo. The reasoning is simple, Smeet means to smile. </br></br>
 I am a <u>Master of Software Development student</U> and have completed <u>Bachelor of Commerce degree</u>. I have acquired 
 knowledge in the fields of <em>accountancy, taxation, commercial law and information systems with an IT specialisation</em>. I am 
 developing my skills in software programming to expand on my technical skills by completing a Masters at VUW and doing various 
 programming projects in my spare time. </p>
-<p>When I am not studying, you will find me reading about new technologies or the current affairs, exploring new places (hiking and travelling), watching such as the Grand Tour, The Block NZ, Grand Designs or more often working on a project. Having a creative minded person, I always thinking about new ways to improve things, to build solutions for issues. I believe that to predict the future; you have to create the future or very much be part of the forefront of changing technology and being innovative.</p>
+<p>When I am not studying, you will find me reading about new technologies, the current affairs or a Lonely Planet, exploring new places (hiking and travelling), watching such as the Grand Tour, The Block NZ, Grand Designs or more often working on a project. Having a creative minded person, I always thinking about new ways to improve things, to build solutions for issues. I believe that to predict the future; you have to create the future or very much be part of the forefront of changing technology and being innovative.</p>
 <p>Currently, I am Working on updating and adding past projects to the website, enhancing the user experience. Along with the site, am learning Android Studio and looking to convert java application to Android apps. I am also planning to make a native application for construction projects, to improve communication between key stakeholders.</p>
 
 <!--enable for the flex tiles row and col--->
@@ -181,41 +181,43 @@ Artist Minder for New Zealand School of Music (Orchestra) and was also offered t
 </video>
 <br>
 <h2 class="w">Education </h2>
-<table>
-<tr>
-<td colspan="2"><h3>Victoria University of Wellington, New Zeland</h3></td>
-</tr>
-<tr>
-<td><b>Master of Software Development</b> (MSwDev)</td>
-<td><b>JULY 2018 – June 2019</b>*</td>
-</tr>
-<tr>
-<td>Expected Graduation December 2019</td>
-<td>* Expected Completion</td>
-</tr>
-<tr>
-<td><b>Bachelor of Commerce</b> (BCOM)</td>
-<td><b>March 2015 – June 2018</b></td>
-</tr>
-<tr>
-<td colspan="2">Major in <u>Accounting</u> and <u>Information System</u> with IT specialisation</td>
-</tr>
-<tr>
-<td colspan="2"><h3>Scots College, Wellington, New Zeland</h3></td>
-</tr>
-<tr>
-<td><b>NCEA Level 1-3, IB MYP</b><td>
-<td>2009 - 2010<td>
-</tr>
-<tr>
-<td colspan="2">Accounting, Design Visual Communication,  Economics, Maths and Physics<td>
-</tr>
-<tr>
-<td colspan="2">Top of Design Visual Communication 2014 (Scots College)<td>
-</tr>
-</table>
-<br>
-<h2 class="w">Hobbies</h2>
+<div class="row"> 
+		  <div class="column">
+<p><h4>Master of Software Development (MSwDev)</h4>
+<p><b>JULY 2018 – June 2019</b></p>
+<p>Expected Graduation December 2019</p>
+<hr class="s1">
+<h4>Bachelor of Commerce</b> (BCOM)</h4>
+<p><b>March 2015 – June 2018</b></p>
+<p>Major in <u>Accounting</u> and <u>Information System</u> with IT specialisation</p>
+<li>Best Performing Student award for Foundation of Information Systems (INFO 101)
+</li>
+<li>Runner Up from VUW for Google Codelab House Price Prediction 2018 Kaggle competition. (28th in NZ and AUS)
+</li>
+<hr>
+<h3>Scots College, Wellington, New Zeland</h3>
+<p><b>2009 - 2010</b></p>
+<p>NCEA Level 1-3, IB MYP</p>
+<p>Accounting, Design Visual Communication,  Economics, Maths and Physics</p>
+<li>Top of Design Visual Communication 2014 (Scots College)</li>
+
+			
+		</div>
+			<!--second col-------------->
+		<div class="column">
+		<br>
+			<div class="hoverOverImage">
+				<img src="sc.jpg" alt="Shop" class="hoverOverImage-layer_bottom">
+				<div class="hoverOverImage-layer_top">
+					<div class="hoverOverImage-text">Scots College lion statue</div>
+				</div>
+			</div>
+	</div> 
+	</div>
+
+
+<hr>
+
 
 
 
