--- a/aboutme.html
+++ b/aboutme.html
@@ -108,7 +108,7 @@ programming projects in my spare time. </p>
 			<div class="hoverOverImage">
 				<img src="tut.png" alt="Tutorial slide" class="hoverOverImage-layer_bottom">
 				<div class="hoverOverImage-layer_top">
-					<div class="hoverOverImage-text">Tutorial slide</div>
+					<div class="hoverOverImage-text">Tutorial slide for privacy and ethics (FaceBook 101) </div>
 				</div>
 			</div>
 <br><br>
