--- a/index.html
+++ b/index.html
@@ -43,15 +43,15 @@
 		  <!--container consist the image and text to display center
 		  when full screen---------------------------------------->
 			<div class="hoverOverImage">
-				<img src="2shakes.png" alt="Webapp" class="hoverOverImage-layer_bottom">
-				<!--<a href="aboutme.html">--><div class="hoverOverImage-layer_top">
+				<img src="2shakes.png" alt="Webapp" class="hoverOverImage-layer_bottom" id="conner_round">
+				<a href="mywork.html"><div class="hoverOverImage-layer_top">
 					<div class="hoverOverImage-text">Web Development & UX</div>
 				</div></a>
 			</div>
 <br><br>
 					<div class="hoverOverImage">
-			<img src="ebike1.png" alt="Webapp" class="hoverOverImage-layer_bottom">
-			<a href="aboutme.html"><div class="hoverOverImage-layer_top">
+			<img src="ebike1.png" alt="Webapp" class="hoverOverImage-layer_bottom" id="conner_round" >
+			<a href="mywork.html"><div class="hoverOverImage-layer_top">
 				<div class="hoverOverImage-text">Graphical Design Projects</div>
 			</div></a>
 		</div>
@@ -61,16 +61,16 @@
 		<div class="column">
 		<br>
 			<div class="hoverOverImage">
-				<img src="bugworld.png" alt="Native App" class="hoverOverImage-layer_bottom">
-				<div class="hoverOverImage-layer_top">
+				<img src="bugworld.png" alt="Native App" class="hoverOverImage-layer_bottom" id="conner_round">
+				<a href="mywork.html"><div class="hoverOverImage-layer_top">
 					<div class="hoverOverImage-text">Native App</div>
-				</div>
+				</div></a>
 			</div>
 <br><br>
 		<div class="hoverOverImage">
-			<img src="conwaysMe.jpeg" alt="Native App" class="hoverOverImage-layer_bottom">
-			<div class="hoverOverImage-layer_top">
-				<div class="hoverOverImage-text">Programing Projects</div>
+			<img src="conwaysMe.jpeg" alt="Native App" class="hoverOverImage-layer_bottom" id="conner_round">
+			<a href="mywork.html"><div class="hoverOverImage-layer_top">
+				<div class="hoverOverImage-text">Programing Projects</div></a>
 			</div>
 		</div>
 	</div> 
@@ -107,6 +107,7 @@
 	display: block;
 }
 .hoverOverImage .hoverOverImage-layer_top {
+	border-radius: 10px;
 	opacity: 0;
 	position: absolute;
 	top: 0;
