--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
 		<div class="hoverOverImage">
 			<img src="conwaysMe.jpeg" alt="Native App" class="hoverOverImage-layer_bottom" id="conner_round">
 			<a href="mywork.html"><div class="hoverOverImage-layer_top">
-				<div class="hoverOverImage-text">Programing Projects</div></a>
-			</div>
+				<div class="hoverOverImage-text">Programing Projects</div>
+			</div></a>
 		</div>
 	</div> 
 	</div>
